# conch-cpp

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  GITHUB_DESCRIPTION.md  Jenkinsfile  LICENSE  README.rst  _run.sh  build.sh  conanfile.py  docker-compose.yml  run.sh
.github/workflows/: ci.yml
cmake/: README.rst
conan/: README.rst
docs/: .gitkeep
scripts/: README.rst  build_clion.sh  build_vs2022.bat  build_xcode.sh  generate_docs.sh  run_tests.bat  run_tests.sh
src/apps/: CMakeLists.txt  README.rst
src/apps/android_lite/: .gitkeep
src/apps/android_native/: CMakeLists.txt  README.rst
src/apps/android_native/include/android_native/: app_core.h
src/apps/android_native/jni/: app_jni.cpp
src/apps/android_native/src/: app_core.cpp
src/apps/breakout_qt/: CMakeLists.txt  game_types.h  game_widget.cpp  game_widget.h  gl_game_widget.cpp  gl_game_widget.h  main.cpp
src/apps/chat_client/: CMakeLists.txt  main.cpp
src/apps/desktop_pro/: CMakeLists.txt
src/apps/ios_native/: CMakeLists.txt  README.rst
src/apps/ios_native/include/ios_native/: app_core.h
src/apps/ios_native/src/: app_core.cpp
src/apps/mario_qt/: CMakeLists.txt  game_types.h  level_data.cpp  level_data.h  main.cpp  mario_game_widget.cpp  mario_game_widget.h  physics_engine.cpp  physics_engine.h
src/libs/: CMakeLists.txt  README.rst
src/libs/foundation/: CMakeLists.txt  README.rst
src/libs/media_core/: CMakeLists.txt  README.rst
src/libs/media_core/include/media/: signalling.hpp
src/libs/media_core/src/: signalling.cpp
src/libs/network/: README.rst
src/libs/quant_core/: CMakeLists.txt  README.rst
src/libs/quant_core/include/quant/: model.hpp
src/libs/quant_core/src/: pricing_model.cpp
src/libs/ui_kit/: CMakeLists.txt  README.rst
src/servers/: CMakeLists.txt  README.rst
src/servers/chat_server/: CMakeLists.txt  main.cpp
src/servers/meeting_gateway/: CMakeLists.txt  main.cpp
src/servers/trading_engine/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.rst
tests/benchmark/: CMakeLists.txt
tests/unit/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  README.rst
